# AI-War-Room

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  test_env.py
backend/agent/: risk.py
backend/api/: main.py
backend/env/: env.py  models.py  simulator.py
backend/grader/: grader.py
backend/tasks/: __init__.py  task_hard.py
frontend/: script.js
server/: app.py
war-room-simulator/: .gitignore  openenv.yaml
war-room-simulator/backend/api/: main.py
war-room-simulator/backend/env/: simulator.py
war-room-simulator/backend/grader/: reward.py
war-room-simulator/backend/tasks/: task_easy.py  task_medium.py
war-room-simulator/backend/utils/: logger.py
war-room-simulator/frontend/: index.html  style.css
