[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ai-war-room"
version = "0.1.0"
description = "AI War Room - Multi-threat defense simulation environment"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "frontend*"]